<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_F8F9F9"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/lk_dp_15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_dialog_share_botu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/lk_dp_55"
                        android:layout_height="@dimen/lk_dp_55"
                        android:src="@mipmap/icon_share_boto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lk_dp_6"
                        android:text="@string/str_share_boto"
                        android:textColor="@color/color_2D2A2A"
                        android:textSize="@dimen/lk_sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dialog_share_wechat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/lk_dp_55"
                        android:layout_height="@dimen/lk_dp_55"
                        android:src="@mipmap/icon_share_weixin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lk_dp_6"
                        android:text="@string/str_share_weixin"
                        android:textColor="@color/color_2D2A2A"
                        android:textSize="@dimen/lk_sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_share_wechat_circle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/lk_dp_55"
                        android:layout_height="@dimen/lk_dp_55"
                        android:src="@mipmap/icon_share_pengyouquan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lk_dp_6"
                        android:text="@string/str_share_wechat_circle"
                        android:textColor="@color/color_2D2A2A"
                        android:textSize="@dimen/lk_sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_share_qq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/lk_dp_55"
                        android:layout_height="@dimen/lk_dp_55"
                        android:src="@mipmap/icon_share_qq_friend" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lk_dp_6"
                        android:text="@string/str_share_qq_friend"
                        android:textColor="@color/color_2D2A2A"
                        android:textSize="@dimen/lk_sp_14" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_botu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lk_dp_10"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_share_life_circle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/lk_dp_55"
                        android:layout_height="@dimen/lk_dp_55"
                        android:src="@mipmap/icon_share_life_circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lk_dp_6"
                        android:text="@string/str_share_life_circle"
                        android:textColor="@color/color_2D2A2A"
                        android:textSize="@dimen/lk_sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_share_copy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/lk_dp_55"
                        android:layout_height="@dimen/lk_dp_55"
                        android:src="@mipmap/icon_share_copy_link" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lk_dp_6"
                        android:text="@string/str_share_copy_link"
                        android:textColor="@color/color_2D2A2A"
                        android:textSize="@dimen/lk_sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dialog_share_sina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="@dimen/lk_dp_55"
                        android:layout_height="@dimen/lk_dp_55"
                        android:src="@mipmap/icon_share_sina" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/lk_dp_6"
                        android:text="@string/str_share_sina"
                        android:textColor="@color/color_2D2A2A"
                        android:textSize="@dimen/lk_sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lk_px_1"
        android:background="@color/color_DDDDDD"/>

    <TextView
        android:id="@+id/tv_share_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lk_dp_50"
        android:background="@drawable/shape_share_shower"
        android:gravity="center"
        android:text="@string/str_nda_share_cancel"
        android:textColor="@color/color_2D2A2A"
        android:textSize="@dimen/lk_sp_14"/>
</LinearLayout>
    